// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oas operation openapi v2 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "87bea6ad",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "becbc0ed96d9d",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "c123e033",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "7e79049c5af23",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "c123e033",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "62e6080a56c45",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "391927d2aa07e",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "122ea0ed",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "b93f4ef60cf1d",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "02c3e323",
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "e1c08deab8b36",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "bdd9d366",
          },
          "style": "form",
        },
        Object {
          "id": "d04bcf1c141cf",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "7a95bfc6",
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [],
        "id": "11ebd9c1a1745",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "extensions": Object {},
    "id": "7a7196f3",
    "method": "options",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "b93f4ef60cf1d",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "02c3e323",
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "e1c08deab8b36",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "bdd9d366",
          },
          "style": "form",
        },
        Object {
          "id": "d04bcf1c141cf",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "7a95bfc6",
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [
          Object {
            "description": "Allowed clients",
            "id": "41b26affa933e",
            "name": "Allow",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "type": "string",
              "x-stoplight-id": "bee595a5",
            },
            "style": "simple",
          },
          Object {
            "description": "Remaining requests",
            "id": "4230cb0eeec66",
            "name": "X-Rate-Limit",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "format": "int64",
              "maximum": 9223372036854776000,
              "minimum": -9223372036854776000,
              "type": "number",
              "x-stoplight-id": "0431f7d8",
            },
            "style": "simple",
          },
        ],
        "id": "b05b1203f39c5",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "979de13c",
    "method": "delete",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "7cfe63ccd08a9",
      },
      Object {
        "code": "404",
        "contents": Array [],
        "description": "Pet not found",
        "headers": Array [],
        "id": "7d3e63ccd0365",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Deletes a pet",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "d2549ba8",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "954d8d8652606",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "c123e033",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "1043a7cddde88",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "c123e033",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "9b5d65cfbc4fd",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "id": "1ee79143656f4",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "dfe72c66",
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "b23e7961e8e83",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "3d04477dddecb",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight-id": "865aac0d",
            },
          },
          Object {
            "examples": Array [],
            "id": "d1be05066ac36",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight-id": "865aac0d",
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "e1deb92ee1e73",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "b28e7961e860c",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
]
`;

exports[`oas operation openapi v3 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "87bea6ad",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "954d8d8652606",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "078e98fe",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "1043a7cddde88",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "078e98fe",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "9b5d65cfbc4fd",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "391927d2aa07e",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "122ea0ed",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [],
        "id": "c842a0cfd11e1",
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [
        Object {
          "examples": Array [],
          "id": "e1c08deab8b36",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "bdd9d366",
          },
          "style": "simple",
        },
        Object {
          "examples": Array [],
          "id": "d04bcf1c141cf",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "7a95bfc6",
          },
          "style": "simple",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "8b1be339a2703",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {},
              "type": "object",
              "x-stoplight-id": "cfeba338",
            },
          },
        ],
        "description": "OK",
        "headers": Array [],
        "id": "11ebd9c1a1745",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "d2549ba8",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "954d8d8652606",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "078e98fe",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "1043a7cddde88",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "078e98fe",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "9b5d65cfbc4fd",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "examples": Array [],
          "id": "1ee79143656f4",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "dfe72c66",
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "b23e7961e8e83",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "edbd8b027c519",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight-id": "98df367a",
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "e1deb92ee1e73",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "b28e7961e860c",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
]
`;
